닉네임 변경화면 완료

--- a/app/src/main/res/layout/activity_edit_user_nick_name.xml
+++ b/app/src/main/res/layout/activity_edit_user_nick_name.xml
@@ -5,6 +5,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:padding="10dp"
     tools:context=".EditUserNickNameActivity">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="변경할 닉네임"/>
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:hint="새로운 닉네임을 입력하세요"
+        android:singleLine="true"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="변경하기"/>
 
 </LinearLayout>
