--- a/app/src/main/res/layout/activity_edit_user_phone_num.xml
+++ b/app/src/main/res/layout/activity_edit_user_phone_num.xml
@@ -14,12 +14,14 @@
             android:layout_height="wrap_content"
             android:text="전화번호 수정"/>
         <EditText
+            android:id="@+id/EdtPhoneNum"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="새 전화번호를 입력하시오"
             android:inputType="phone"/>
 
         <Button
+            android:id="@+id/okBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="전화번호 수정"/>
