--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -90,7 +90,12 @@
                 android:text="전화걸기"
                 android:layout_marginLeft="10dp"/>
         </LinearLayout>
-
+        <Button
+            android:id="@+id/callBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="전화걸기"
+            android:layout_marginTop="10dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -122,6 +127,7 @@
                 android:text="수정하기"
                 android:layout_marginLeft="10dp"/>
         </LinearLayout>
+
 
     </LinearLayout>
 </layout>
