--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -108,6 +108,12 @@
             android:layout_height="wrap_content"
             android:text="네이버로 연결하기"
             android:layout_marginTop="10dp"/>
+        <Button
+            android:id="@+id/storeLinkBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="카카오톡 스토어링크로 연결하기"
+            android:layout_marginTop="10dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
